fix: faq spacing

--- a/styles/Faq.module.scss
+++ b/styles/Faq.module.scss
@@ -42,9 +42,9 @@
 		flex-direction: column;
 		position: relative;
 		button {
-			margin: 0.5rem 0;
+			margin: 1vh 0;
 			padding: 0 4vw 0 1vw;
-			height: 3rem;
+			height: 5vh;
 			display: flex;
 			align-items: center;
 			font-size: 14px;
@@ -84,7 +84,7 @@
 			position: absolute;
 			top: 0;
 			right: 0;
-			height: 3rem;
+			height: 5vh;
 			width: 3px;
 			background: $logo-mid;
 			transition: transform 0.2s ease-out, top 0.2s ease-out;
